# dailyorient

./: .gitignore  CHANGELOG.md  README.md  dailyorient.cabal
src/: Domain.hs  Location.hs  Main.hs  Manager.hs  Routes.hs  Weather.hs
src/Server/: Servant.hs  Yesod.hs
src/Server/Yesod/: Htmx.hs  Routes.hs
src/Server/Yesod/Handler/: Cleaning.hs  Greeting.hs  Holiday.hs  Home.hs  Lfia.hs  Test.hs  TodayIs.hs  Weather.hs
