cabal-version:       2.2

name:                dailyorient
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/dailyorient#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable dailyorient
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Domain
                        , Server.Servant
                        , Server.Yesod
                        , Server.Yesod.Handler.Home
                        , Server.Yesod.Routes
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                        , servant
                        , servant-server
                        , wai
                        , warp
                        , yesod
                        , yesod-core
  ghc-options:         -Wall
                       -Werror
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -O2
