cabal-version:       2.2

name:                dailyorient
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/dailyorient#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable dailyorient
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Domain
                        , Location
                        , Manager
                        , Server.Yesod
                        , Server.Yesod.Handler.Cleaning
                        , Server.Yesod.Handler.Greeting
                        , Server.Yesod.Handler.Holiday
                        , Server.Yesod.Handler.Home
                        , Server.Yesod.Handler.Lfia
                        , Server.Yesod.Handler.TodayIs
                        , Server.Yesod.Handler.Weather
                        , Server.Yesod.Htmx
                        , Server.Yesod.Routes
                        , Weather
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                        , aeson
                        , bytestring
                        , containers
                        , data-default
                        , deepseq
                        , http-client
                        , http-client-tls
                        , http-types
                        , mtl
                        , stm
                        , text
                        , time
                        , wai
                        , wai-extra
                        , warp
                        , yesod
                        , yesod-core
  ghc-options:         -Wall
                       -Werror
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -O2
                       -static
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -with-rtsopts=-T
